--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>Sayf Ammar</title>
+    <meta name="google-site-verification" content="Hc0WoL1b2ebGlbyo5mbeNxI2Yr4_UWwmcZTjacLwRw0" />
   </head>
+  
   <body>
     <h1>Hello, my name is Sayf Ammar</h1>
   </body>
